to java 17 and update testkit dependencies